<resources>
    <string name="app_name">Apprentice App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>


    <!-- Nav links text -->
    <string name="nav_home_text">Home</string>
    <string name="nav_study_text">Study</string>
    <string name="nav_social_text">Social</string>
    <string name="nav_calendar_text">Calendar</string>
    <string name="nav_profile_text">Profile</string>
    <string name="nav_settings_text">Settings</string>


    <!-- Profile Page -->
    <string name="capgemini_info_button">Capgemini Info</string>
    <string name="interests_label">Interests</string>
    <string name="skills_label">Skills</string>
    <string name="save_profile_text">Save Profile</string>


    <!-- Capgemini Info Page -->
    <string name="capgemini_info_title_text">Capgemini Info</string>
    <string name="capgemini_email_label_text">Email</string>
    <string name="capgemini_base_location_label_text">Base Location</string>
    <string name="capgemini_info_grade_label_text">Grade</string>
    <string name="capgemini_info_job_title_label_text">Job Title</string>
    <string name="capgemini_info_join_date_label_text">Join Date</string>
    <string name="save_text">SAVE</string>


    <!-- Study Page -->
    <string name="my_modules_text">My Modules</string>
    <string name="notes_text">Notes</string>


    <!-- My Modules Page -->
    <string name="current_modules_text">Current Modules</string>
    <string name="previous_modules_text">Previous Modules</string>
    <string name="upcoming_modules_text">Upcoming Modules</string>


    <!-- Module Detail Page -->
    <string name="view_notes_text">View Notes</string>
    <string name="view_module_calendar_text">View Module Calendar</string>
    <string name="community_related_workshops_text">Community / Related Workshops</string>
    <string name="edit_tasks_text">Edit Tasks</string>


    <!-- Notes Search Page -->
    <string name="filter_general_custom_text">Filter by General/Custom Tags</string>
    <string name="filter_modules_text">Filter by Modules</string>


    <!-- Grid Diary Page -->
    <string name="went_well_label_text">What went well today?</string>
    <string name="not_go_well_label_text">What didn\'t go well today?</string>
    <string name="grid_diary_additional_label_text">Additional notes?</string>
    <string name="rate_day_label_text">How would you rate your day?</string>
    <string name="save_day_text">Save Day</string>


    <!-- Social Page -->
    <string name="people_label_text">People</string>
    <string name="events_label_text">Events</string>


    <!-- Event Search Page -->
    <string name="filter_by_interests_location_label_text">Filter by Interests/Location</string>
    <string name="skill_suggested_events_label_text">Suggested Events Based on your Skills / Interests</string>
    <string name="log_in_title_text">Welcome. Log in or create an account!</string>
    <string name="log_in_button_text">Log in</string>
    <string name="create_account_button_text">Create account</string>
    <string name="description_label_text">Description</string>
    <string name="edit_button_text">EDIT</string>
    <string name="current_skills_label_text">Current Skills</string>
    <string name="remove_button_text">REMOVE</string>
    <string name="add_new_skill_text">Add a new skill</string>
    <string name="new_skill_name_label_text">Skill name:</string>
    <string name="button_add_text">ADD</string>
    <string name="category_label_text">Category:</string>
    <string name="cancel_text">CANCEL</string>
    <string name="existing_skill_label_text">Add an existing skill from the community</string>
    <string name="filter_by_category_text">Category:</string>
    <string name="suggested_people_label_text">Suggested People</string>
    <string name="contacts_text">Contacts</string>
    <string name="find_new_contacts_button_text">FIND NEW CONTACTS</string>
    <string name="suggested_contacts_label_text">Suggested Contacts</string>
    <string name="add_contact_button_text">ADD CONTACT</string>
    <string name="remove_contact_button_text">REMOVE CONTACT</string>
    <string name="find_new_events_button_text">FIND NEW EVENTS</string>
    <string name="view_attendees_button_text">VIEW ATTENDEES</string>
    <string name="date_label">Date:</string>
    <string name="location_label">location:</string>
    <string name="date_label_text">Date</string>
    <string name="location_label_text">Location</string>
    <string name="good_for_label_text">Good For</string>
    <string name="prerequisites_label_text">Prerequisites</string>
    <string name="related_skills_label_text">Related Skills</string>
    <string name="attend_button_text">ATTEND</string>
    <string name="save_event_button_text">SAVE EVENT</string>
    <string name="share_button_text">SHARE</string>
    <string name="cancel_attendance_button_text">CANCEL ATTENDANCE</string>
    <string name="create_new_event_button_text">CREATE NEW EVENT</string>
    <string name="events_created_by_you_label_text">Events Created By You</string>
    <string name="nav_admin_text">Admin</string>
    <string name="view_participants_button_text">VIEW PARTICIPANTS</string>
    <string name="view_deadlines_button_text">VIEW DEADLINES</string>
    <string name="deadlines_label_text">Deadlines</string>
    <string name="edit_deadline_title_text">Edit Deadline</string>
    <string name="hours_label_text">HOURS</string>
    <string name="minutes_label_text">MINUTES</string>
    <string name="day_label_text">DAY</string>
    <string name="month_label_text">MONTH</string>
    <string name="year_label_text">YEAR</string>
    <string name="time_label_text">TIME</string>
    <string name="send_message_button_text">SEND MESSAGE</string>
    <string name="delete_event_button_text">DELETE EVENT</string>
    <string name="upcoming_deadlines_label_text">Upcoming Deadlines</string>
    <string name="existing_skill_name_label">Skill Name:</string>

</resources>
