<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!-- Name and Description -->
        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="Enter name..."
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="Enter description..."
            android:textAlignment="center"
            android:textSize="15dp" />

        <!-- View Attendees Button -->
        <Button
            android:id="@+id/viewAttendeesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/view_attendees_button_text" />


        <!-- Date and time -->
        <Button
            android:id="@+id/pickTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set Time" />

        <TextView
            android:id="@+id/hoursLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label_text" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/pickDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set Date" />

        <TextView
            android:id="@+id/dateLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label_text" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Location -->
        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/location_label_text"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="Enter location..."
            android:textSize="11dp" />

        <!-- Good For -->
        <TextView
            android:id="@+id/goodForLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/good_for_label_text"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/goodForText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="Enter a description of who this event would be good for"
            android:textSize="11dp" />

        <!-- Prerequisites -->
        <TextView
            android:id="@+id/prerequisitesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/prerequisites_label_text"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/prerequisitesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="Enter any prerequisites that people should have before attending"
            android:textSize="11dp" />


        <!-- Related Skills -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/skillsSection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/skillsHeaderSection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/skillsLabel"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/related_skills_label_text"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addSkillButton"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/edit_button_text" />

            </LinearLayout>

            <TextView
                android:id="@+id/skillInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You must save new events for the first time before adding skills"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/currentSkillsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">deadlines

            </LinearLayout>


        </LinearLayout>

        <!-- Add, share and Save buttons -->
        <Button
            android:id="@+id/attendButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/attend_button_text" />

        <Button
            android:id="@+id/eventSaveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save_event_button_text" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/share_button_text" />

        <Button
            android:id="@+id/cancelAttendanceButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel_attendance_button_text" />

        <Button
            android:id="@+id/deleteEventButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/delete_event_button_text" />

    </LinearLayout>
</ScrollView>