<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <!-- Title -->
    <TextView
        android:id="@+id/capgeminiInfoTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/capgemini_info_title_text"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textStyle="bold" />


    <!-- Email -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/capgemini_email_label_text"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="sam.ford@capgemini.com"
        android:textSize="11dp"/>


    <!-- Base Location -->
    <TextView
        android:id="@+id/baseLocationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/capgemini_base_location_label_text"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/baseLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Holborn"
        android:textSize="11dp"/>


    <!-- Grade -->
    <TextView
        android:id="@+id/gradeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/capgemini_info_grade_label_text"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/gradeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="A3"
        android:textSize="11dp"/>


    <!-- Job Title -->
    <TextView
        android:id="@+id/jobTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/capgemini_info_job_title_label_text"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/jobTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Software Engineer"
        android:textSize="11dp"/>


    <!-- Join Date -->
    <TextView
        android:id="@+id/joinDateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/capgemini_info_join_date_label_text"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/joinDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="15th July 2013"
        android:textSize="11dp"/>


    <!-- Save Button -->
    <Button
        android:id="@+id/saveCapgeminiInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        android:layout_marginTop="10dp"/>


</LinearLayout>