<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <!-- Title -->
    <TextView
        android:id="@+id/logInTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/log_in_title_text"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textStyle="bold" />


    <!-- Log in -->
    <TextView
        android:id="@+id/logInContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Enter your ID and log in"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/idText"
        android:hint="Enter your id.."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="11dp"/>


    <!-- Create account -->
    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_button_text"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/createAccountContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Don't have an account?"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button_text"
        android:layout_marginTop="10dp"/>


</LinearLayout>